cp 35 assignment complete, settings menu right aligned -- trying to fix

--- a/css/style.css
+++ b/css/style.css
@@ -702,6 +702,11 @@ footer .logo{
    margin-top:8px;
  }
 
+ .left-nav .settings .menu
+{
+  text-align: left;
+}
+
 /* Content Styles */
 
 .content {
